--- a/mvc/index.html
+++ b/mvc/index.html
@@ -5,4 +5,15 @@
 
 <script>
 console.log((new controller()).query("#test").view);
+var m = new model();
+
+m.ajax(
+	"get",
+	"index.php",
+	{},
+	function(d) {
+		d = JSON.parse(d);	
+		console.log(d);
+	}
+);
 </script>
