--- a/mvc/index.html
+++ b/mvc/index.html
@@ -18,7 +18,7 @@
 <script>
 window.onload = function() {
     //console.log((new controller()).query("#test").views);
-    new controller().query("#test").M({
+    new controller().query().M({
         type : "get",
 	    url : "index.php",
 	    data : {}
